# HuffmanCoding

./: CMakeLists.txt  makeTmuxSession.sh
src/: file.c  huffman.c  huffman.h  main.c
